mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specified_by_type.sol
contract A layout at uint {}
// ----
// TypeError 1763: (21-25): The base slot of the storage layout must evaluate to an integer.
